--- a/kafka_ui/index.html
+++ b/kafka_ui/index.html
@@ -11,6 +11,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- SignalR Client -->
+    <script src="https://unpkg.com/@microsoft/signalr@latest/dist/browser/signalr.min.js"></script>
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -261,7 +263,7 @@
 
                     <!-- Kafka Status -->
                     <div class="row mb-4">
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="card text-center">
                                 <div class="card-body">
                                     <h5 class="card-title">order-created</h5>
@@ -271,7 +273,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">product-created</h5>
+                                    <p class="card-text">
+                                        <span class="badge bg-primary" id="product-created-count">0</span> messages
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
                             <div class="card text-center">
                                 <div class="card-body">
                                     <h5 class="card-title">stock-updated</h5>
@@ -281,7 +293,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="card text-center">
                                 <div class="card-body">
                                     <h5 class="card-title">notification-sent</h5>
@@ -402,6 +414,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="js/api.js"></script>
+    <script src="js/signalr-service.js"></script>
     <script src="js/kafka-monitor.js"></script>
     <script src="js/app.js"></script>
 </body>
